@@ -2,6 +2,8 @@
 	* New features:
 		- Add icomet-server start options(2014-11-29)
 		- Send periodical presence online events(2014-11-29)
+	* Incompatible changes:
+		- /broadcast will automatically encode content(2015-07-25)
 * 0.2.2.2
 	* New features:
 		- Add /broadcast, broadcast message to all channels(2014-08-28)
